# pico-torch-CPP-

./: .gitignore  CMakeLists.txt  README.md  build.sh  main  main.cpp
include/: CMakeLists.txt  tensor.hpp
src/: operations.cpp  tensor.cpp
